Fixing fonts and spacing in RP section
Can't figure out why it's bolding in chrome.

--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -193,11 +193,11 @@ div.nospaces {
   font-weight: normal;
   letter-spacing: 1px;
    padding: 0 0 0 0;
-  text-indent: 5px;
+  text-indent: 0px;
 }
 
 .actions{
-  margin: 0 0 20px;
+  margin: 0 0 0 0px;
 }
 .actions:last-child{
   margin: 0;
